Fix double-scroll bar generation bug
Original thanks to @pranav1698

This fixes a bug where multiple scroll bars would appear after
resetting or clearing filters.

Fixes: #473

Signed-off-by: Steven Esser <sesser@nexb.com>

--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -48,6 +48,11 @@ body {
   font-family: 'Raleway Black', Helvetica, san-serif;
 }
 
+/* This is for removing unwanted double scrollbar */
+.DTFC_LeftWrapper {
+  overflow: hidden;
+}
+
 /*---------------------------------------
   Layout
 -----------------------------------------*/
