Limited Table view Search
Signed-off-by: Aayush-hub <ayushgarg1951@gmail.com>

--- a/assets/app/css/main.css
+++ b/assets/app/css/main.css
@@ -356,6 +356,11 @@ body {
   text-align: right;
 }
 
+.checked-inline {
+  margin: 4px;
+  margin-top: 0;
+}
+
 .dataTable td select {
   width: 100%;
 }
