--- a/src/components/Layout/layout.css
+++ b/src/components/Layout/layout.css
@@ -10,8 +10,11 @@
 .file-tree-pane {
   border: 0;
   box-shadow: rgb(177 177 177) 1px 0px 18px -3px;
+  overflow: overlay !important;
 }
-
+.content-pane {
+  overflow: overlay !important;
+}
 .content-container {
   padding: 10px;
   padding-top: 5px;
