Fixed existing history item bug
Signed-off-by: Omkar Phansopkar <omkarphansopkar@gmail.com>

--- a/src/pages/TableView/TableView.css
+++ b/src/pages/TableView/TableView.css
@@ -47,6 +47,9 @@
   max-height: 300px;
   overflow-y: overlay;
 }
+.ag-cell-wrap-text {
+  word-break: break-word;
+}
 
 .filterComponent {
   margin: auto;
