--- a/src/colors.css
+++ b/src/colors.css
@@ -3,4 +3,7 @@
   --background: #ffffff;
   --textFocused: #1a1919;
   --textColor: #282828;
+  --accentColor: #0685b9;
+  --accentHoverColor: #f3f9ff;
+  --lightTextColor: #4b4b4b;
 }
