Updated schema to store top level packages & dependencies too
Signed-off-by: Omkar Phansopkar <omkarphansopkar@gmail.com>

--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -85,7 +85,7 @@
   min-width: 50px;
 }
 .history table .delete-action {
-  color: rgba(53, 0, 0, 0.933);
+  color: #0a417f;
   padding-left: 25px;
   cursor: pointer;
   font-size: 18px;
