--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -1,6 +1,3 @@
-/* .home-page {
-
-} */
 #welcomepage-title{
   text-align: center;
   margin-top: 10px;
@@ -19,9 +16,7 @@
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  /* margin: 3rem 2rem; */
   margin-bottom: 1rem;
-  /* padding: 1rem; */
   padding-left: 1.5rem;
   padding-right: 1.5rem;
 }
@@ -49,7 +44,6 @@
 
 .quickActionIcon{
   font-size: 60px;
-  /* margin-bottom: 20px; */
 }
 
 .drop-instruction {
@@ -58,10 +52,6 @@
   margin-top: 50px;
   color: var(--lightTextColor);
 }
-
-/* .history h5 {
-  margin-left: 25px;
-} */
 
 .quicklinks, .history {
   margin-top: 15px;
@@ -85,14 +75,13 @@
   min-width: 50px;
 }
 .history table .delete-action {
-  color: #0a417f;
+  color: #0e5bb2;
   padding-left: 25px;
   cursor: pointer;
   font-size: 18px;
 }
 .history table .delete-action:hover {
   color: rgba(25, 0, 0, 0.933);
-  font-size: 20px;
 }
 .history button {
   margin: 5px;
