Schema/update for output format v3.0.0 (#4)
* Updated schema for header info

Signed-off-by: Omkar Phansopkar <omkarphansopkar@gmail.com>

* Updated schema & ux for license detections, packages

Signed-off-by: Omkar Phansopkar <omkarphansopkar@gmail.com>

* License detections explorer menu

Signed-off-by: Omkar Phansopkar <omkarphansopkar@gmail.com>

* Removed residue columns for older license format

Signed-off-by: Omkar Phansopkar <omkarphansopkar@gmail.com>

* Merged license keys with URLs in match table

Signed-off-by: Omkar Phansopkar <omkarphansopkar@gmail.com>

* Testing License keys parser

Signed-off-by: Omkar Phansopkar <omkarphansopkar@gmail.com>

* Completed license detection match table UI

Signed-off-by: Omkar Phansopkar <omkarphansopkar@gmail.com>

* Updated UX & schema for latest output LicenseDetections

Signed-off-by: Omkar Phansopkar <omkarphansopkar@gmail.com>

* Tableview scoped filters, Header-less import, filename in titlebar, format & crash fixes

Signed-off-by: Omkar Phansopkar <omkarphansopkar@gmail.com>

* Ignored directories when preparing chart data

Signed-off-by: Omkar Phansopkar <omkarphansopkar@gmail.com>

* Package_data fields, file & package info dashboard, chart empty labels

Signed-off-by: Omkar Phansopkar <omkarphansopkar@gmail.com>

* Completed all pie charts

Signed-off-by: Omkar Phansopkar <omkarphansopkar@gmail.com>

* New window, Info dash fixes, Completed matches table, fixed flatFiles, spdx parsing for matches

Signed-off-by: Omkar Phansopkar <omkarphansopkar@gmail.com>

---------

Signed-off-by: Omkar Phansopkar <omkarphansopkar@gmail.com>

--- a/src/components/Layout/layout.css
+++ b/src/components/Layout/layout.css
@@ -3,21 +3,17 @@
   height: 100vh !important;
 }
 
-/* .pane-container .content-pane {
-  
-} */
-
 .file-tree-pane {
   border: 0;
   box-shadow: rgb(177 177 177) 1px 0px 18px -3px;
   overflow: overlay !important;
 }
 .content-pane {
-  overflow: overlay !important;
+  overflow-y: overlay !important;
 }
 .content-container {
   padding: 10px;
   padding-top: 5px;
   padding-bottom: 5px;
-  min-height: 100%;
+  min-height: 95%;
 }
