--- a/src/pages/Licenses/Licenses.css
+++ b/src/pages/Licenses/Licenses.css
@@ -11,18 +11,23 @@
   margin-top: 200px;
   justify-content: center;
 }
-.license-detections-main-container {
-  padding-top: 5px;
-}
 .license-container {
-  height: 90vh;
+  height: calc(100vh - 60px);
 }
-.license-detections-panes {
+.licenses-navigator-container {
+  padding: 0.5rem;
   padding-right: 15px;
-  overflow: overlay !important;
+  padding-top: 0;
+}
+.licenses-navigator-pane {
+  overflow: scroll !important;
+}
+.licenses-navigator-pane-title {
+  font-size: large;
+  padding: 1px;
 }
 
-.license-detection-item {
+.license-item {
   border: 0 !important;
   cursor: pointer;
   width: 100%;
@@ -36,35 +41,35 @@
 }
 
 
-.license-detection-group-item {
+.license-group-item {
   padding: 0 !important;
 }
-.license-detection-item .expression{
+.license-item .expression{
   padding-left: 2px;
   padding-right: 2px;
 }
-.license-detection-item .expression .badge{
+.license-item .expression .badge{
   margin-left: 10px;
 }
-.license-detection-item > div {
+.license-item > div {
   padding: 2px;
   padding-right: 4px;
   display: table-cell;
   vertical-align: middle;
 }
-.license-detection-item > div > div {
+.license-item > div > div {
   padding: 3px;
   display: table-cell !important;
   word-break: break-word;
 }
-.license-detection-item > .license-count {
+.license-item > .license-count {
   padding-top: 7px;
   padding-right: 7px;
 }
-.license-detection-item > .license-count > * {
+.license-item > .license-count > * {
   float: right;
 }
-.license-detection-item:hover{
+.license-item:hover{
   background-color: rgb(242, 242, 242);
 }
 
