--- a/src/pages/Packages/packages.css
+++ b/src/pages/Packages/packages.css
@@ -4,6 +4,7 @@
   margin-top: 5px;
   width: 100%;
 }
+
 .packages-loader {
   display: flex;
   margin: auto;
@@ -11,13 +12,16 @@
   margin-top: 200px;
   justify-content: center;
 }
+
 .packages-container {
   height: calc(100vh - 60px);
 }
+
 .packages-panes {
   padding-right: 15px;
   overflow: overlay !important;
 }
+
 .details-pane {
   padding: 10px;
 }
@@ -33,16 +37,20 @@
   overflow-x: clip;
   padding: 0 !important;
 }
+
 .packages-list {
   border: 0 !important;
 }
+
 .collapsed-body {
   padding-left: 22px;
 }
-.dependency-list > .collapsed-body .entity {
+
+.dependency-list>.collapsed-body .entity {
   border: 0 !important;
 }
-.dependency-list > .collapsed-body .entity-info {
+
+.dependency-list>.collapsed-body .entity-info {
   padding-left: 20px;
 }
 
@@ -53,50 +61,64 @@
   display: table;
   align-items: center;
 }
+
 .entity-type-badge {
   float: right;
   margin-right: 0;
 }
-.entity-info .entity-name{
+
+.entity-info .entity-name {
   padding-left: 2px;
   padding-right: 2px;
 }
-.entity-info .entity-name .badge{
+
+.entity-info .entity-name .badge {
   margin-left: 10px;
 }
-.entity-info > div {
+
+.entity-info>div {
   padding: 2px;
   padding-right: 4px;
   display: table-cell;
 }
-.entity-info > div > div {
+
+.entity-info>div>div {
   padding: 3px;
   display: table-cell !important;
   word-break: break-word;
 }
+
 .expand-package {
   display: inline-block;
   border-radius: 50%;
 }
-.expand-package .expanded-icon{
+
+.expand-package .expanded-icon {
   transform: rotate(90deg);
 }
-.expand-package svg{
+
+.expand-package svg {
   transition: transform 300ms ease-in;
 }
-.expand-package:active, .expand-package:hover {
+
+.expand-package:active,
+.expand-package:hover {
   font-size: 14px;
 }
-.entity-info > .total-deps {
+
+.entity-info>.total-deps {
   padding-top: 7px;
   padding-right: 7px;
 }
-.entity-info > .total-deps > * {
+
+.entity-info>.total-deps>* {
   float: right;
 }
-.entity-info:hover{
+
+.entity-info:hover {
   background-color: rgb(242, 242, 242);
 }
-.selected-entity > .entity-info {
+
+.selected-entity>.entity-info {
   background-color: #dedede;
 }
