--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -1,17 +1,19 @@
-#welcomepage-title{
+#welcomepage-title {
   text-align: center;
   margin-top: 10px;
 }
+
 #welcomepage-title .logo {
   font-family: 'Raleway', Helvetica, san-serif;
   color: #0064cd;
 }
+
 #welcomepage-title .strong-logo {
   font-weight: bolder;
   font-family: 'Raleway Black', Helvetica, san-serif;
 }
 
-.quickActions{
+.quickActions {
   text-align: center;
   display: flex;
   justify-content: space-around;
@@ -21,7 +23,7 @@
   padding-right: 1.5rem;
 }
 
-.quickActions svg{
+.quickActions svg {
   margin-bottom: 15px;
 }
 
@@ -42,7 +44,7 @@
   margin-right: 20px;
 }
 
-.quickActionIcon{
+.quickActionIcon {
   font-size: 60px;
 }
 
@@ -53,36 +55,44 @@
   color: var(--lightTextColor);
 }
 
-.quicklinks, .history {
+.quicklinks,
+.history {
   margin-top: 15px;
   padding-left: 2rem;
 }
-.history table{
+
+.history table {
   min-width: 80%;
   max-width: 95%;
 }
+
 .history .import-column {
   width: 130px;
   word-wrap: break-word;
 }
+
 .history table .file-path {
   min-width: 400px;
   max-width: 60vw;
   word-wrap: break-word;
   padding-right: 10px;
 }
+
 .history table .delete-col {
   min-width: 50px;
 }
+
 .history table .delete-action {
   color: #0e5bb2;
   padding-left: 25px;
   cursor: pointer;
   font-size: 18px;
 }
+
 .history table .delete-action:hover {
   color: rgba(25, 0, 0, 0.933);
 }
+
 .history button {
   margin: 5px;
   margin-left: 0px;
@@ -90,7 +100,7 @@
 }
 
 
-.btn-group-horizontal a{
+.btn-group-horizontal a {
   margin: 0px;
   margin-top: .5rem;
   margin-right: 1rem;
