Implemented matched text diff with rule text, resolves #561
Signed-off-by: Omkar Phansopkar <omkarphansopkar@gmail.com>

--- a/src/components/LicenseEntity/licenseEntity.css
+++ b/src/components/LicenseEntity/licenseEntity.css
@@ -29,3 +29,8 @@
 .file-regions-table {
   max-height: 30vh;
 }
+
+.matched-text-diff-modal {
+  overflow: scroll;
+  max-height: calc(100vh - 120px);
+}
