--- a/src/colors.css
+++ b/src/colors.css
@@ -6,4 +6,6 @@
   --accentColor: #0685b9;
   --accentHoverColor: #f3f9ff;
   --lightTextColor: #4b4b4b;
+  --listHoverColor: #f5f5f5;
+  --listSelectionColor: #eaeaea;
 }
