Dependency Filters as specified in #579 & UX feedback resolutions
Signed-off-by: Omkar Phansopkar <omkarphansopkar@gmail.com>

--- a/src/app.css
+++ b/src/app.css
@@ -1,12 +1,7 @@
 /*---------------------------------------
   General
 -----------------------------------------*/
-body {
-  font-family: 'Lato', Helvetica, sans-serif;
-  height: 100%;
-  width: 100%;
-  position: absolute;
-}
+
 
 a,
 a:not([href]),
@@ -26,6 +21,7 @@ input[type="search"]::-webkit-search-results-button {
   display: block;
 
 }
+
 input[type="search"]::-webkit-search-cancel-button {
   cursor: pointer;
 }
@@ -42,6 +38,17 @@ img {
   user-select: none;
 }
 
+/* Revive scrollbar being hidden on macos */
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 5.5px; /* Width ignored by horizontal scrllbars */
+  height: 5.5px; /* Height ignored by vertical scrllbars */
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 3px;
+  background-color: rgba(0,0,0,.4);
+  box-shadow: 0 0 0.1px rgb(255 255 255 / 30%);
+}
 
 /*---------------------------------------
   Font source mapping
@@ -84,7 +91,7 @@ img {
   border-radius: 2px;
   box-shadow: 1px 0 8px -3px #b1b1b1;
   background-color: #FFFFFF;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 
 img {
