--- a/src/pages/ChartView/chartView.css
+++ b/src/pages/ChartView/chartView.css
@@ -1,3 +1,9 @@
 .barchartContainer {
   padding: 10px;
 }
+
+.chartWrapper {
+  overflow: auto;
+  margin-top: 20px;
+  max-height: calc(100vh - 60px);
+}
